[package]
name = "teensy"
version = "0.1.0"
authors = ["Phaiax <phaiax-git@invisibletower.de>"]
description = "Teensy (3.1) project builder and upload helper"
repository = "https://github.com/Phaiax/cargo-teensy"
license = "CC-BY-4.0"

[[bin]]
name = "cargo-teensy"
test = false

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
toml = "0.2"
yaml-rust = "0.3"
curl = "0.3"
regex = "0.1"